dealt with unclosed scanner when opening a file